<resources>

    <!-- App -->
    <string name="app_name">Dexedd!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- Title -->
    <string name="title_dex">Dex</string>
    <string name="title_about">About</string>
    <string name="title_type">Type</string>
    <string name="title_types">Types</string>
    <string name="title_ability">Ability</string>
    <string name="title_abilities">Abilities</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight</string>
    <string name="title_catch_rate">Catch rate</string>
    <string name="title_egg_groups">Egg groups</string>
    <string name="title_gender_ratio">Gender ratio</string>
    <string name="title_stats">Stats</string>
    <string name="title_evolution_chain">Evolution chain</string>

    <!-- Unit -->
    <string name="meter_unit">m</string>
    <string name="kilogram_unit">kg</string>
    <string name="pound_unit">lb</string>

    <!-- Etc -->
    <string name="standard_number_format">%.1f</string>
    <string name="genderless">Genderless</string>
    <string name="mars">♂</string>
    <string name="venus">♀</string>
    <string name="ability_hidden">Hidden</string>
    <string name="ability_hidden_short">H</string>

    <!-- Word -->
    <string name="and">and</string>

    <!-- Pokémon -->
    <string name="pokemon">Pokémon</string>

    <!-- Type -->
    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="fighting">Fighting</string>
    <string name="flying">Flying</string>
    <string name="poison">Poison</string>
    <string name="ground">Ground</string>
    <string name="rock">Rock</string>
    <string name="bug">Bug</string>
    <string name="ghost">Ghost</string>
    <string name="steel">Steel</string>
    <string name="fire">Fire</string>
    <string name="water">Water</string>
    <string name="grass">Grass</string>
    <string name="electric">Electric</string>
    <string name="psychic">Psychic</string>
    <string name="ice">Ice</string>
    <string name="dragon">Dragon</string>
    <string name="dark">Dark</string>
    <string name="fairy">Fairy</string>
    <string name="unknown">\?\?\?</string>

    <!-- Stat -->
    <string name="health_points">Health points</string>
    <string name="health_points_short">hp</string>
    <string name="attack">Attack</string>
    <string name="attack_short">atk</string>
    <string name="defense">Defense</string>
    <string name="defense_short">def</string>
    <string name="special_attack">Special attack</string>
    <string name="special_attack_short">satk</string>
    <string name="special_defense">Special defense</string>
    <string name="special_defense_short">sdef</string>
    <string name="speed">Speed</string>
    <string name="speed_short">spd</string>

    <!-- Evolution  chain-->
    <string name="base_stage">Base stage</string>
    <string name="baby_stage">Baby, either parent must hold %1$s</string>
    <string name="trigger_level_up">Level up</string>
    <string name="trigger_trade">Trade</string>
    <string name="trigger_use_item">Use</string>
    <string name="trigger_shed">Evolve from %1$s (%2$s will consume a Poké Ball and appear in a free party slot)</string>
    <string name="requirement_minimum_level">starting at level %1$d</string>
    <string name="requirement_trigger_item">a %1$s</string>
    <string name="requirement_gender_female">(females only)</string>
    <string name="requirement_gender_male">(males only)</string>
    <string name="requirement_location">around %1$s (%2$s)</string>
    <string name="requirement_held_item">while holding a %1$s</string>
    <string name="requirement_at_daytime">at daytime</string>
    <string name="requirement_at_nighttime">at nighttime</string>
    <string name="requirement_known_move">knowing %s</string>
    <string name="requirement_known_move_type">knowing a %1$s-type move</string>
    <string name="requirement_minimum_happiness">with at least %1$d happiness</string>
    <string name="requirement_minimum_beauty">with at least %1$d beauty</string>
    <string name="requirement_minimum_affection">with at least %1$d affection hearts</string>
    <string name="requirement_attack_equals_defense">while having ATK = DEF</string>
    <string name="requirement_attack_greater_than_defense">while having ATK &gt; DEF</string>
    <string name="requirement_attack_less_than_defense">while having ATK &lt; DEF</string>
    <string name="requirement_in_party_pokemon_species">with %1$s in the party</string>
    <string name="requirement_in_party_pokemon_type">with a %1$s-type Pokémon in the party</string>
    <string name="requirement_trade_for">in exchange for %1$s</string>
    <string name="requirement_rain">while raining</string>
    <string name="requirement_turn_upside_down">with the device turned upside-down</string>

    <!-- Content description -->
    <string name="description_pokemon_image">This is a Pókemon image</string>
    <string name="description_mark_as_catched">Mark this Pokémon as catched</string>

</resources>