<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dex_entry_gender_ratio_label"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_gender_ratio" />

    <LinearLayout
        android:id="@+id/dex_entry_gender_ratio_content"
        style="@style/PanelRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dex_entry_gender_ratio_label"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/dex_entry_gender_ratio_bar"
            style="@style/ProgressBarStandard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_marginBottom="@dimen/progress_bar_margin_vertical"
            android:layout_marginTop="@dimen/progress_bar_margin_vertical"
            android:progressDrawable="@drawable/gender_ratio_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mars"
                android:textColor="@color/male"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dex_entry_male_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/venus"
                android:textColor="@color/female"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dex_entry_female_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/genderless"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>